--- a/stylemypage.css
+++ b/stylemypage.css
@@ -30,6 +30,13 @@ h1 {
   font-family: 'Roboto', sans-serif;
 }
 
+#sm-work2 {
+  color: black;
+  font-size: 18px;
+  text-align: center;
+  font-family: 'Roboto', sans-serif;
+}
+
 #small-work {
   margin: 15px;
   padding: 30px;
@@ -39,6 +46,7 @@ h1 {
   letter-spacing: 1px;
   line-height: 20px;
 }
+
 
 .img-container {
   float: left;
