--- a/styleportfolio.css
+++ b/styleportfolio.css
@@ -7,6 +7,14 @@ h1 {
   letter-spacing: 5px;
 }
 
+
+#sm-work2 {
+  color: black;
+  font-size: 18px;
+  text-align: center;
+  font-family: 'Roboto', sans-serif;
+}
+
 * {
     box-sizing: border-box;
 }
