--- a/styles.css
+++ b/styles.css
@@ -127,6 +127,11 @@ body {
     height: auto;
 }
 
+.mind-video-embed {
+    aspect-ratio: 1 / 1;
+    width: 50%;
+}
+
 /* Mobile */
 @media screen and (max-width: 600px) {
     .container {
