--- a/styles.css
+++ b/styles.css
@@ -163,6 +163,11 @@ body {
         width: 100%; 
         height: auto;
     }
+
+    .mind-video-embed {
+        aspect-ratio: 1 / 1;
+        width: 100%;
+    }
 }
 
 /* Info – Bio */
