--- a/styles.css
+++ b/styles.css
@@ -125,6 +125,10 @@ body {
 .xl-image {
     width: 100%; 
     height: auto;
+    margin-bottom: 10px;
+}
+
+.img-caption {
     margin-bottom: 32px;
 }
 
