--- a/styles.css
+++ b/styles.css
@@ -137,6 +137,11 @@ body {
     width: 50%;
 }
 
+.full-width-video-embed {
+    aspect-ratio: 16 / 9;
+    width: 100%;
+}
+
 /* Mobile */
 @media screen and (max-width: 600px) {
     .container {
